force-app/main/default/objects/Generic_Data__c/Generic_Data__c.object-meta.xml
<CustomObject>
    <description>This object is to hold generic data that does not have an object to live on</description>
    <label>Generic Data</label>
    <nameField>
        <label>Generic Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>