force-app/main/default/objects/Generic_Data__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>What location is this data for</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>ARC/CARE</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>CRC-MRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>