force-app/main/default/objects/Generic_Data__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <inlineHelpText>This is the generic data - text format</inlineHelpText>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>